# path-monitor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
analyzer/: db.py  detectors.py  runner.py  sinks.py
common/: status.py
config/: path_monitor.yaml
data/snapshots/: alerts.metadata.json  paths.metadata.json  probes.metadata.json  sqlite_sequence.ndjson  targets.metadata.json  targets.ndjson
orchestrator/: cli.py  config.py  supervisor.py  targets.py
prober/: db_writer.py  icmp_packet.py  icmp_socket.py  runner.py  traceroute.py
scripts/: deploy.sh  scenario_loss.sh  scenario_route_change.sh  setup.sh
sql/: schema.sql
tests/: test_detectors.py  test_icmp_packet.py
tests/integration/: conftest.py  netns.py  responder.py  test_clean.py  test_loss.py  test_rtt.py
