[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "path-monitor"
version = "0.1.0"
description = "Continuous ICMP/traceroute network path monitor with anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
path-monitor          = "orchestrator.cli:main"
path-monitor-prober   = "prober.runner:main"
path-monitor-analyzer = "analyzer.runner:main"

[tool.setuptools]
packages = ["prober", "analyzer", "orchestrator"]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests requiring Linux + root (run: sudo pytest -m integration)",
]
addopts = "-m 'not integration'"
